Browser Check: Solved Awkward Gaps in Responsiveness
All elements have a width of 100% unless it needs to be back to its original state.

--- a/Week11/pub_html/css/grids.css
+++ b/Week11/pub_html/css/grids.css
@@ -49,10 +49,15 @@
 	height: 7rem;
 }
 
+/* OTHER MAIN GRID PROPERTIES */
 
 .grid-col-header {
 	margin: 0;
 	padding: 0;
+}
+
+.grid-col-footer-link {
+	width: initial;
 }
 
 
